--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 title: Contacts
-permalink: /contacts/
+permalink: contacts/
 layout: main
 ---
 
